config/002-app-from-image.yaml
---
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: goapp
  namespace: default
spec:
  template:
    spec:
      containers:
      - image: nimak/knative-sample-app:v1
        env:
        - name: NAME
          value: "John"
