config/010-app-from-image.yaml
---
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: goapp
  namespace: default
spec:
  runLatest:
    configuration:
      revisionTemplate:
        metadata:
          annotations:
            autoscaling.knative.dev/class: kpa.autoscaling.knative.dev
            autoscaling.knative.dev/metric: concurrency
            autoscaling.knative.dev/target: "5"
        spec:
          allowAsync: "true"
          container:
            image: nimak/knative-sample-app:v3
            imagePullPolicy: Always
            env:
              - name: NAME
                value: "Nima"
